[tool.poetry]
name = "va-court-scraper"
version = "0.1.0"
description = ""
authors = ["isaak-a <isaakranderson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
notebook = "^6.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
